--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-      "start": "node app.js",
-  "dev": "nodemon app.js",
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,14 +12,19 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/joi": "^17.2.3",
     "body-parser": "^1.20.2",
+    "core-js": "^3.38.0",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
     "express-yup-middleware": "^1.2.4",
     "mysql2": "^3.11.0",
+    "typescript": "^5.5.4",
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/mysql": "^2.15.26",
     "nodemon": "^3.1.4"
   }
 }
